--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phone Tracker App</title>
   </head>
-    <body>
-      <div id="app"></div>
-    </body>
-  </html>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
